--- a/template/.babelrc
+++ b/template/.babelrc
@@ -17,6 +17,7 @@
     [
       "@babel/plugin-transform-runtime",
       {
+        "corejs": "2",
         "helpers": true,
         "regenerator": true
       }
