feat: Add test babel

--- a/template/.babelrc
+++ b/template/.babelrc
@@ -36,6 +36,18 @@
           }
         ]
       ]
+    },
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "esmodules": false
+            }
+          }
+        ]
+      ]
     }
   }
 }
